deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: website
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 3
  strategy: 
    type: "RollingUpdate"
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: ghcr.io/go4clouds/webapp:v0.1.1
        resources:
          limits:
            cpu: "500m"
            memory: "128Mi"
          requests:
            cpu: "100m"
            memory: "64Mi"
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 20
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
