hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello
  namespace: webapp
spec:
  ingressClassName: "nginx"
  rules:
    - host: web13.go4clouds.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: hello-world2
                port:
                  number: 8080
